--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
 
       <!-- Section 1 -->
-      <section class="section">
+      <section class="section section-feature">
         <div class="container">
           <h2 class="hidden">Feature</h2>
           <ul class="feature-list">
@@ -148,7 +148,7 @@
 
     <!-- Footer -->
     <footer class="footer-style">
-      <div class="container footer-item">
+      <div class="container">
         <a href="./index.html" class="footer-logo"> <span class="span-logo">WEB</span>STUDIO</a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital marketing & growth
